--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<article id="intro">
 								<h2 class="major">About Me</h2>
 								<span><img class="img-circle" src="images/pic01.jpeg" style="height:300px;" alt="Avatar" /></span>
-								<p>Hey! <br />My name is Vikrant Attri, righ now i am 19 year old, brought into this world on 27 February 1999.<br />I am an aspiring student currently pursuing engineering, an adventurour, a part time chef ( Lowkey: Just for my family ),
+								<p>Hey! <br />My name is Vikrant Attri, righ now i am 19 year old, brought into this world on 27 February.<br />I am an aspiring student currently pursuing engineering, an adventurour, a part time chef ( Lowkey: Just for my family ),
 								But firstly I am a son and a brother.<br />I am an outgoing guy, I love talking to people in general getting to know them.
 								<br />I feel that if i am in this world as a human then its my responsibilty to act like one and do something for the society.
 								<br />
