--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">About Me</h2>
-								<span><img class="img-circle" src="images/pic01.jpeg" style="height:300px;" alt="Avatar" /></span>
+								<span><img class="img-circle" src="images/pic01.jpeg" style="height:300px;" /></span>
 								<p>Hey! <br />My name is Vikrant Attri, righ now i am 19 year old, brought into this world on 27 February.<br />I am an aspiring student currently pursuing engineering, an adventurour, a part time chef ( Lowkey: Just for my family ),
 								But firstly I am a son and a brother.<br />I am an outgoing guy, I love talking to people in general getting to know them.
 								<br />I feel that if i am in this world as a human then its my responsibilty to act like one and do something for the society.
@@ -80,7 +80,7 @@
 								<h4>Theortical Physics</h4>
 								<p>I am very curious about time travel hence, i do research on the concerned subject and write blogs on it.
 								<br />
-									<a href="https://www.vikky1999.blogspot.in">Click Here To Read It!.</p>
+									<a href="https://www.vikky1999.blogspot.com">Click Here To Read It!.</p>
 								<h4>Writing books on Wattpad</h4>
 								<p>I write books on wattpad and edit them for few friends as editor.</p>
 								<h4>I love doing Theatre.</h4>
