--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 								<h4>Writing books on Wattpad</h4>
 								<p>I write books on wattpad and edit them for few friends as editor.</p>
 								<h4>I love doing Theatre.</h4>
-								<h4>I also host a Talk Show.</h4>
-								<h4>You can also call me part time chef as i love to talk.</h4>
+								<h4>I also hosted a Talk Show.</h4>
+								<h4>You can also call me part time chef as i love to cook.</h4>
 								<h4>I also love to sing and drawing sketches.</h4>
 							</article>
 
