--- a/index.html
+++ b/index.html
@@ -1,115 +1,133 @@
 <!DOCTYPE HTML>
 
 <html>
-	<head>
-		<title>Vikrant Attri</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<style>
+
+<head>
+	<title>Vikrant Attri</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+</head>
+<style>
 	.img-circle {
 		border-radius: 60%;
-		}
-	</style>
-	<body class="is-preload">
+	}
+</style>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+<body class="is-preload">
 
-				<!-- Header -->
-					<header id="header">
-						<div class="logo">
-							<span class="icon fa-diamond"></span>
-						</div>
-						<div class="content">
-							<div class="inner">
-								<h1>Vikrant Attri</h1>
-								<br />
-								<p>"Be The Change You Want To See In The World"<br />
-									By Mahatma Gandhi.</p>
-							</div>
-						</div>
-						<nav>
-							<ul>
-								<li><a href="#intro">About Me</a></li>
-								<li><a href="#work">Skills</a></li>
-								<li><a href="#about">Hobbies</a></li>
-								<li><a href="#contact">Contact</a></li>
-							</ul>
-						</nav>
-					</header>
+	<!-- Wrapper -->
+	<div id="wrapper">
 
-				<!-- Main -->
-					<div id="main">
-
-						<!-- Intro -->
-							<article id="intro">
-								<h2 class="major">About Me</h2>
-								<span><img class="img-circle" src="images/pic01.jpeg" style="height:300px;" alt="Avatar" /></span>
-								<p>Hey! <br />My name is Vikrant Attri, righ now i am 19 year old, brought into this world on 27 February 1999.<br />I am an aspiring student currently pursuing engineering, an adventurour, a part time chef ( Lowkey: Just for my family ),
-								But firstly I am a son and a brother.<br />I am an outgoing guy, I love talking to people in general getting to know them.
-								<br />I feel that if i am in this world as a human then its my responsibilty to act like one and do something for the society.
-								<br />
-								Music is my life and it keeps me alive.
-								I really feel the need to try new things even though they are bizzare or strange.</p>
-							</article>
-
-						<!-- Work -->
-							<article id="work">
-								<h2 class="major">Skills</h2>
-									<h4>Web Application Developer</h4>
-									<p>Experienced in developing Web Application on a Django framework, while i can efficiently use jQuery, Ajax and Selenium.
-								  <br />Also experienced in php.</p>
-									<h4>Console Application Developer</h4>
-									<p>Experienced in developing Console Application programmed in C, C++, Python and Java while using Database connectivity with tools such as SQL.</p>
-									<h4>Computer Languages</h4>
-									<p>Certified in C, C++ and Python.<br/>
-									Proficient in HTML, CSS, Javascript.<br />
-								  Familiar with Ajax, Selenium.</p>
-									<h4>See the projects i have done, click on the icon below.</h4>
-									<ul class="icons">
-										<li><a href="https://github.com/vikky-noelle" class="icon fa-github"><span class="label">GitHub</span></a></li>
-									</ul>
-								</article>
-						<!-- About -->
-							<article id="about">
-								<h2 class="major">Hobbies</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<h4>Theortical Physics</h4>
-								<p>I am very curious about time travel hence, i do research on the concerned subject and write blogs on it.
-								<br />
-								<ul>
-									<li><a href="https://www.vikky1999.blogspot.com">Click Here To Read It!.</p>
-								</li></ul>
-								<h4>Writing books on Wattpad</h4>
-								<p>I write books on wattpad and edit them for few friends as editor.</p>
-								<h4>I love doing Theatre.</h4>
-								<h4>I also hosted a Talk Show.</h4>
-								<h4>You can also call me part time chef as i love to cook.</h4>
-								<h4>I also love to sing and drawing sketches.</h4>
-							</article>
-
-						<!-- Contact -->
-							<article id="contact">
-								<h2 class="major">Contact</h2>
-								<h3>Email Me At: Vikky.noelle@gmail.com</h3>
-								<br />
-								<ul class="icons">
-									<li><a href="https://www.instagram.com/vikrant.attri.33/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="https://github.com/vikky-noelle" class="icon fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
-							</article>
-					</div>
+		<!-- Header -->
+		<header id="header">
+			<div class="logo">
+				<span class="icon fa-diamond"></span>
+			</div>
+			<div class="content">
+				<div class="inner">
+					<h1><a href="/home.html">Vikrant Attri</a></h1>
+					<br />
+					<p>"Be The Change You Want To See In The World"<br />
+						By Mahatma Gandhi.</p>
 				</div>
+			</div>
+			<nav>
+				<ul>
+					<li><a href="#intro">About Me</a></li>
+					<li><a href="#work">Skills</a></li>
+					<li><a href="#about">Hobbies</a></li>
+					<li><a href="#contact">Contact</a></li>
+				</ul>
+			</nav>
+		</header>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		<!-- Main -->
+		<div id="main">
 
-	</body>
+			<!-- Intro -->
+			<article id="intro">
+				<h2 class="major">About Me</h2>
+				<span><img class="img-circle" src="images/pic01.jpeg" style="height:300px;" alt="Avatar" /></span>
+				<p>Hey! <br />My name is Vikrant Attri, righ now i am 19 year old, brought into this world on 27
+					February 1999.<br />I am an aspiring student currently pursuing engineering, an adventurour, a part
+					time chef ( Lowkey: Just for my family ),
+					But firstly I am a son and a brother.<br />I am an outgoing guy, I love talking to people in general
+					getting to know them.
+					<br />I feel that if i am in this world as a human then its my responsibilty to act like one and do
+					something for the society.
+					<br />
+					Music is my life and it keeps me alive.
+					I really feel the need to try new things even though they are bizzare or strange.
+				</p>
+			</article>
+
+			<!-- Work -->
+			<article id="work">
+				<h2 class="major">Skills</h2>
+				<h4>Web Application Developer</h4>
+				<p>Experienced in developing Web Application on a Django framework, while i can efficiently use jQuery,
+					Ajax and Selenium.
+					<br />Also experienced in php.
+				</p>
+				<h4>Console Application Developer</h4>
+				<p>Experienced in developing Console Application programmed in C, C++, Python and Java while using
+					Database connectivity with tools such as SQL.</p>
+				<h4>Computer Languages</h4>
+				<p>Certified in C, C++ and Python.<br />
+					Proficient in HTML, CSS, Javascript.<br />
+					Familiar with Ajax, Selenium.</p>
+				<h4>See the projects i have done, click on the icon below.</h4>
+				<ul class="icons">
+					<li><a href="https://github.com/vikky-noelle" class="icon fa-github"><span
+								class="label">GitHub</span></a></li>
+				</ul>
+			</article>
+			<!-- About -->
+			<article id="about">
+				<h2 class="major">Hobbies</h2>
+				<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+				<h4>Theortical Physics</h4>
+				<p>I am very curious about time travel hence, i do research on the concerned subject and write blogs on
+					it.
+					<br />
+				<ul>
+					<li><a href="https://www.vikky1999.blogspot.com">Click Here To Read It!.</p>
+					</li>
+				</ul>
+				<h4>Writing books on Wattpad</h4>
+				<p>I write books on wattpad and edit them for few friends as editor.</p>
+				<h4>I love doing Theatre.</h4>
+				<h4>I also hosted a Talk Show.</h4>
+				<h4>You can also call me part time chef as i love to cook.</h4>
+				<h4>I also love to sing and drawing sketches.</h4>
+			</article>
+
+			<!-- Contact -->
+			<article id="contact">
+				<h2 class="major">Contact</h2>
+				<h3>Email Me At: Vikky.noelle@gmail.com</h3>
+				<br />
+				<ul class="icons">
+					<li><a href="https://www.instagram.com/vikrant.attri.33/" class="icon fa-instagram"><span
+								class="label">Instagram</span></a></li>
+					<li><a href="https://github.com/vikky-noelle" class="icon fa-github"><span
+								class="label">GitHub</span></a></li>
+				</ul>
+			</article>
+		</div>
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
